# game-raylib-imgui

./: .gitignore  CMakeLists.txt  README.md  build.bat  imgui.ini  vcpkg.json
src/: main.cpp
src/core/: Game.cpp  Game.h  GameState.h
src/core/states/: ExitState.h  GameOverState.h  LoadState.h  MenuState.h  PauseState.h  PlayState.h
src/core/world/: Map.cpp  Map.h
src/entities/: Enemy.cpp  Enemy.h  Entity.h  Player.cpp  Player.h
src/ui/play/: PlayUI.h
src/utils/debug/: DebugUI.cpp  DebugUI.h
